sudoku.css
body {
    background-color: white;
    color: black;
}

#content {
    margin-left: auto;
    margin-right: auto;
    padding: 0;
    text-align: center;
}

h3 {
    text-align: center;
}

input.user {
    text-align: center;
    background-color: #efefff;
    border: none;
}
#submit {
}

table.sudoku {
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    margin-bottom: 15px;
    border-spacing: 0em;
    table-layout: fixed;
    border-collapse: collapse;
    border-spacing: 0px;
}

table.sudoku td {
    border: 1px solid black;
    font-family: "Comic Sans Ms", sans-serif;
    font-size: 1.1em;
    font-weight: normal;
    width: 2em;
    height: 2em;
    padding: 0px;
    margin: 0px;
    text-align: center;
}

table.sudoku .top { border-top-width: 2px; }
table.sudoku .bottom { border-bottom-width: 2px; }
table.sudoku .left { border-left-width: 2px; }
table.sudoku .right { border-right-width: 2px; }

table.sudoku .hidden { color: lime; }
table.sudoku .hidden { display: none; }


table.sudoku td.riddle { color: black; }
table.sudoku td.user { color: silver; }
table.sudoku td.solution { color: lime; }
table.sudoku td.incorrect { color: red; }
table.sudoku td.invalid { background-color: maroon; color: black; }

